commit-040422-0010 -> Корректировка стилей (SCSS).

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,1 +1,25 @@
-$main_color: #0c99a7;
+
+//======================================================
+//================= ПЕРЕМЕННЫЕ =========================
+//======================================================
+
+$main_color: #000000;
+
+//======================================================
+//================== МИКСИНЫ ===========================
+//======================================================
+
+@mixin font($size, $weight, $line-height, $color: $main_color) {
+  font-size: $size;
+  font-weight: $weight;
+  line-height: $line-height;
+  color: $color;
+}
+
+@mixin blik($size, $top, $left ){
+  position: absolute;
+  top: $top;
+  left: $left;
+  height: $size;
+  width: $size;
+}
