--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -28,3 +28,17 @@ $main_color: #000000;
   width: $width;
   margin: 0 auto;
 }
+
+@mixin wh_size($width, $height, $type-circle:none) {
+  width: $width;
+  height: $height;
+
+  @if $type-circle == circle {
+    border-radius:100%;
+  }
+  @else if $type-circle == edge {
+    border-radius:30px;
+  }
+  @else {
+  }
+}
