--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,4 +1,4 @@
-
+@import "media";
 //======================================================
 //================= ПЕРЕМЕННЫЕ =========================
 //======================================================
